--- a/administrator/com_joomgallery/language/en-GB/com_joomgallery.exif.ini
+++ b/administrator/com_joomgallery/language/en-GB/com_joomgallery.exif.ini
@@ -291,3 +291,9 @@ COM_JOOMGALLERY_TAGNAME="Tag-Name"
 COM_JOOMGALLERY_TAGNR="Tag-Nr."
 COM_JOOMGALLERY_SUBIFD_USERCOMMENT="Comment"
 COM_JOOMGALLERY_SUBIFD_USERCOMMENT_DESCRIPTION="A tag for Exif users to write keywords or comments on the image besides those in ImageDescription, and without the character code limitations of the ImageDescription tag."
+COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT="Comment Format"
+COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_DESCRIPTION="The format in which the user comment should be saved under."
+COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_ASCII="ASCII"
+COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_JIS="JIS"
+COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_UNICODE="Unicode"
+COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_UNDEFINED="Undefined"
