Change structure of exif subforms to match imgmetadata JSON

--- a/administrator/com_joomgallery/language/en-GB/com_joomgallery.ini
+++ b/administrator/com_joomgallery/language/en-GB/com_joomgallery.ini
@@ -55,6 +55,7 @@ COM_JOOMGALLERY_UNAPPROVED="Unapproved"
 COM_JOOMGALLERY_REJECTED="Rejected"
 COM_JOOMGALLERY_OWNER="Owner"
 COM_JOOMGALLERY_PARAMETERS="Parameters"
+COM_JOOMGALLERY_METADATA="Metadata"
 COM_JOOMGALLERY_HIDDEN="Hidden"
 COM_JOOMGALLERY_IMAGE_RATING="Image Rating"
 COM_JOOMGALLERY_AUTO_ORIENTATION="Auto Orientation"
