--- a/administrator/com_joomgallery/language/en-GB/com_joomgallery.ini
+++ b/administrator/com_joomgallery/language/en-GB/com_joomgallery.ini
@@ -875,6 +875,8 @@ COM_JOOMGALLERY_MENU_CATEGORY_VIEW_PAGINATION_OPT1="Infinity scroll"
 COM_JOOMGALLERY_MENU_CATEGORY_VIEW_PAGINATION_OPT2="Load more button"
 COM_JOOMGALLERY_MENU_CATEGORY_VIEW_NUMBER_OF_RELOADED_IMAGES_DESC="Number of reloaded images per load more click."
 COM_JOOMGALLERY_MENU_CATEGORY_VIEW_NUMBER_OF_RELOADED_IMAGES_LABEL="# Images Reloaded"
+COM_JOOMGALLERY_ERROR_SAVE_METADATA_TO_FILE="Metadata failed to save to the image."
+COM_JOOMGALLERY_SUCCESS_SAVE_METADATA_TO_FILE="Metadata successfuly saved to the image."
 
 ; Plugin events
 COM_JOOMGALLERY_PLUGIN_ERROR_RETURN_VALUE="Return value of the plugin event '%s' must be of type %s and contain : %s"
